# flip-disc

./: .gitignore  CLAUDE.md  Makefile  PROJECT_CONTEXT.md  README.md  app.py  bunfig.toml  config.toml  feedback.md  flip-disc.code-workspace  flipdots_protocols.md  next-steps.md  package.json  post-processing-pipeline.md  protocol.md  pyproject.toml  sample_css.css  sample_html.html  setup.py
assets/clips/: clips.toml
assets/text/: fonts.toml
config/: display.yaml
deploy/: README-systemd.md  install_systemd.sh
deploy/systemd/: flipdisc-orchestrator.service  flipdisc-server.service  flipdisc-worker@.service
flipdisc/: __init__.py  app.py  cli.py  config.py  exceptions.py  logging_conf.py  serial_port.py
flipdisc/animations/: __init__.py  analog_clock.py  base.py  bouncing_dot.py  clip.py  clock.py  composed.py  image.py  life.py  pendulum.py  precipitation.py  simplex_noise.py  supersampled.py  text.py  weather.py  weather_icon.py  wireframe_cube.py
flipdisc/anims/: __init__.py  life.py
flipdisc/clips/: __init__.py  importer.py  loader.py
flipdisc/core/: exceptions.py  types.py
flipdisc/engine/: api_server.py  display_pacer.py  generator.py  pipeline.py  shared_ring.py  worker_pool.py
flipdisc/fonts/: loader.py
flipdisc/gfx/: __init__.py  dither.py  pack.py  postprocessing.py  terminal.py
flipdisc/hardware/: PROTOCOL.md  constants.py  formats.py  panel_map.py  protocol.py  serial.py  spec.py
flipdisc/hw/: constants.py  formats.py  panel_map.py  protocol.py  spec.py
flipdisc/services/: README.md  __init__.py  api.py  hardware.py  moon_phase.py  weather.py  worker_manager.py
flipdisc/tests/: test_basic.py  test_clips.py  test_fonts.py  test_formats.py  test_moon_phase.py  test_pacing.py  test_text_animation.py  test_weather_animation.py  test_weather_service.py
flipdisc/web/: api_server.py  index.html
flipdisc/workers/: ipc.py  runner.py
media_pipeline/: pyproject.toml  runner.py
media_pipeline/common/: base.py  font.py  pipeline.py  preview.py  rbm.py  runner.py  viewer.py
orchestrator/: README.md  bunfig.toml  config.ts  index.js  index.ts  package.json  preload.ts  server_state.ts  state.ts  tsconfig.json
orchestrator/http/: validation.ts
orchestrator/protocol/: rbm.ts
proto/: flipdisc_frame.ksy
protocol/: rbm_spec.md
server/: .env.example  README.md  api.py  config.py  config.toml  engine.py  mapping.py  pyproject.toml  pyrightconfig.json  rbm.py  serial_io.py  setup.sh
server/src/: __init__.py  api.py  config.py  display_controller.py  frame_buffer.py  frame_mapper.py  main.py  panel_mapper.py  protocol_config.py  protocol_encoder.py  protocol_service.py  serial_controller.py  serial_port.py  serial_writer.py  server_app.py  validation.py
server/tests/: __init__.py  test_binary_protocol.py  test_config.py  test_display_controller.py  test_frame_buffer.py  test_protocol_packing.py  test_serial_controller.py  test_smoke_websocket.py
server/web/: index.html
src/: __init__.py  config.yaml  controller.py  display.py  driver.py  frame.py  main.py  panel.py
tests/: test_font_bitmap.py  test_rbm_and_mapping.py
tools/: ksc.js  package-lock.json  package.json
workers/: README.md  bouncing_dot.ts  package.json  pyproject.toml  pyrightconfig.json  runner.py  simplex_noise.ts  tsconfig.json
workers/bouncing_dot/: main.py
workers/common/: base.py  font.py  font.ts  ingest_client.py  pipeline.ts  preview.py  rbm.py  rbm.ts  runner.py  thread_runner.ts  viewer.py
workers/text/: main.ts
workers/text_scroll/: main.py
(+51 files in other folders)
