[project]
name = "flipdisc"
version = "0.1.0"
description = "Python flip-disc display controller for Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "numpy>=1.24.0",
    "pyserial>=3.5",
    "websockets>=11.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "aioserial>=1.3.0",
    "scipy>=1.11.0",
    "scikit-image>=0.22.0",
    "opensimplex>=0.4.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["flipdisc*"]
exclude = ["assets*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ICN", "PIE", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "RUF"]
ignore = ["E501", "PLR0913", "PLR0912", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["T201", "T203"]
"**/test_*.py" = ["T201", "T203"]
"tests/**/*" = ["T201", "T203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 88

[tool.pytest.ini_options]
testpaths = ["flipdisc/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
