[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flipdisc-media-pipeline"
version = "0.1.0"
description = "Flip-Disc media pipeline (Python)"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
  "websockets>=12.0",
]

[tool.setuptools]
packages = []

