[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flipdisc-python-server"
version = "0.1.0"
description = "Flip-disc display server (Python) with RBM ingest, pacing, and viewer"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "PyYAML>=6.0",
  "pyserial>=3.5",
  "Pillow>=10.0",
  "aioserial>=1.3",
  "numpy>=1.24",
  "orjson>=3.9",
  "uvloop>=0.19; platform_system != 'Windows'",
]
