[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flip-disc-server"
version = "0.1.0"
description = "Flip disc display server"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aioserial>=1.3.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "websockets>=11.0.0",
    "kaitaistruct>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "gen"]

[tool.ruff]
extend-exclude = [
    "gen/**",  # generated code (Kaitai)
]
